--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "serve": "vite preview --host 127.0.0.1"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
-    "element-plus": "1.0.2-beta.52",
+    "element-plus": "^2.3.12",
     "typescript": "^5.1.6",
-    "vue": "^3.1.2",
+    "vue": "^3.2.36",
     "vue-cropperjs": "^5.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.10",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.1.2",
+    "@vue/compiler-sfc": "^3.3.4",
     "crypto-js": "^4.1.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
@@ -36,8 +37,10 @@
     "px2rem-loader": "^0.1.9",
     "sass": "^1.53.0",
     "unplugin-auto-import": "^0.9.2",
+    "unplugin-icons": "^0.16.6",
     "unplugin-vue-components": "^0.20.1",
-    "vite": "2.3.7"
+    "vite": "2.3.7",
+    "vite-plugin-inspect": "^0.7.38"
   },
   "browserslist": [
     "> 1%",
